[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/AutotileGenerator/3x3min3_floor_and_walls.png" type="Texture" id=1]
[ext_resource path="res://textures/tileset x1.png" type="Texture" id=2]
[ext_resource path="res://addons/AutotileGenerator/AutotileGenerator.gd" type="Script" id=3]
[ext_resource path="res://addons/AutotileGenerator/Dock.tscn" type="PackedScene" id=4]

[sub_resource type="TileSet" id=1]
0/name = "tileset x1.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 1024, 32, 96, 32 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [ Vector3( 2, 0, 48 ) ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Tileset_Autotile_Generator" type="Control"]
margin_right = 384.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
mapType = "FLOOR"
tileSize = Vector2( 32, 32 )
templateAlpha = 0.541

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport2" type="Viewport" parent="ViewportContainer"]
size = Vector2( 384, 128 )
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/Viewport2"]
offset = Vector2( 192, 64 )
current = true

[node name="TileMap_floor" type="TileMap" parent="ViewportContainer/Viewport2"]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 2, 1, 0, 2, 2, 0, 2, 3, 0, 2, 4, 0, 2, 5, 0, 2, 6, 0, 2, 7, 0, 2, 8, 0, 2, 9, 0, 1, 10, 0, 2, 11, 0, 2, 65536, 0, 2, 65537, 0, 2, 65538, 0, 2, 65539, 0, 2, 65540, 0, 2, 65541, 0, 2, 65542, 0, 2, 65543, 0, 2, 65544, 0, 2, 65545, 0, 2, 65547, 0, 2, 131072, 0, 2, 131073, 0, 2, 131074, 0, 2, 131075, 0, 2, 131076, 0, 2, 131077, 0, 2, 131078, 0, 2, 131079, 0, 2, 131080, 0, 2, 131081, 0, 2, 131082, 0, 2, 131083, 0, 2, 196608, 0, 2, 196609, 0, 2, 196610, 0, 2, 196611, 0, 2, 196612, 0, 2, 196613, 0, 2, 196614, 0, 2, 196615, 0, 2, 196616, 0, 2, 196617, 0, 2, 196618, 0, 2, 196619, 0, 2 )

[node name="TileMap_walkPath" type="TileMap" parent="ViewportContainer/Viewport2"]
format = 1

[node name="TileMap_wall" type="TileMap" parent="ViewportContainer/Viewport2"]
format = 1

[node name="TileMap_topWall" type="TileMap" parent="ViewportContainer/Viewport2"]
format = 1

[node name="templates" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.541 )
scale = Vector2( 0.5, 0.5 )

[node name="bitmask" type="Sprite" parent="templates"]
visible = false
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 768, 256 )

[node name="tallWalls_tiles64w184h_offset0x-120y" type="Sprite" parent="templates"]
visible = false
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 256, 768, 736 )

[node name="topDownThickWalls_tiles64w88h" type="Sprite" parent="templates"]
visible = false
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 992, 768, 352 )

[node name="topDownWalls_tiles64w64h" type="Sprite" parent="templates"]
visible = false
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 1344, 768, 256 )

[node name="topDownFloor_tiles64w64h" type="Sprite" parent="templates"]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 1600, 768, 256 )

[node name="Dock" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="signal_file_selected" from="Dock" to="." method="_on_Dock_signal_file_selected"]
